--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "mocha": "mocha test/ --recursive --exit"
   },
   "dependencies": {
+    "@feathersjs/authentication": "^2.1.11",
+    "@feathersjs/authentication-jwt": "^2.0.5",
+    "@feathersjs/authentication-local": "^1.2.5",
+    "@feathersjs/authentication-oauth2": "^1.2.4",
     "@feathersjs/configuration": "^2.0.4",
     "@feathersjs/errors": "^3.3.0",
     "@feathersjs/express": "^1.2.3",
@@ -35,9 +39,11 @@
     "@feathersjs/socketio": "^3.2.6",
     "compression": "^1.7.3",
     "cors": "^2.8.4",
+    "feathers-mongodb": "^3.3.0",
     "feathers-mongoose": "^6.1.2",
     "helmet": "^3.13.0",
     "mongoose": "^5.2.6",
+    "passport-google-oauth20": "^1.0.0",
     "serve-favicon": "^2.5.0",
     "winston": "^3.1.0"
   },
